2011-01-10  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/match.c: match.c: better handling of "separator only"
	  globs in match_word()

2011-01-10  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/match.c: match.c: move glob/disk backslash substitution
	  out of match_word()

2011-01-10  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/match.c: match.c: factorize regex construction from
	  expression

2011-01-10  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/match.c: match.c: factorize character escaping in
	  make_exact_*_expression()

2011-01-10  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/match.c: match.c: factorize regex matching
	* common-src/match.h: make match and match_no_newline into
	  macros calling do_match

2011-01-10  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/match.c: match.c: factorize regex compile

2011-01-10  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/match.c: match.c: match_host(): use g_ascii_strdown() to
	  convert to lowercase

2011-01-10  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/match.c: match.c: fix '*' and '?' expansion in
	  match_word()

2011-01-10  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/match.c: match.c: define a macro to recognize regex
	  metacharacters

2011-01-10  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/match.c: match.c: match_host(): remove unneeded cast

2011-01-10  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/match.c: match.c: match_word(): rename "i" local variable
	  to "ret"

2011-01-10  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/match.c: match.c: match_word(): rename two local
	  variables. Rename r to dst, and w to src, in order to clarify their
	  roles.

2011-01-10  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/match.c: match.c: match_word(): remove unused assignment

2011-01-07  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar.c, application-src/amstar.c: Do not call